# mysql-mtr-history-dashboard

./: .gitignore  Jenkinsfile  README.md  compose.yml  extarct_parametrs.py  extract_failed_testsuites.py  jenkins-job.yaml  justfile  pyproject.toml
build_data/: get_build_data.py
caddy/: Caddyfile
docs/: architecture.md
docs/presentation/: 01-problem.html  02-architecture.html  03-data-pipeline.html  04-dashboard.html  05-impact.html
grafana/: compose.override.yml
grafana/dashboards/: mtr-history.json
grafana/provisioning/dashboards/: mtr-dashboards.yml
mtr_history/: backfill.py  build_to_json.py  jenkins_fetcher.py  jenkins_rest_fetcher.py  junit_parser.py  openmetrics_exporter.py  schema.py
mtr_history/tests/: test_jenkins_rest_fetcher.py  test_junit_parser.py  test_openmetrics_exporter.py
